--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
 
 <h1>My First Heading</h1>
 
-<p>My first paragraph goal got</p>
+<p>My first paragraph goal got all the best</p>
 
 </body>
 </html>
